# spectrophoner

./: .gitignore  Cargo.toml  README.md  start_auto_test.sh
src/: arrays.rs  audio.rs  audio_streamer.rs  bin.rs  chunk.rs  color.rs  conductor.rs  img_dispatcher.rs  img_interpreter.rs  lib.rs  mixer.rs  pitch.rs  portaudio_streamer.rs  sample_buffer.rs  sample_generator.rs  synth.rs  test_utils.rs  wav_streamer.rs
src/img/: dispatch.rs  read.rs
src/synth/: mod.rs
src/util/: mod.rs
tests/: orientation_check.rs
