[package]
name = "spectrophone"
version = "0.1.0"
authors = ["Andrew Yoon <ayoon@toasttab.com>"]

[dependencies]
time = "*"
image = "*"
portaudio = "0.7.0"
libc = "0.2.39"
rand = "0.4.2"
ndarray = "*"

[lib]
name = "spectrophoner"
path = "src/lib.rs"

[[bin]]
name = "spectrophoner_test"
path = "src/bin.rs"

[profile.release]
debug = true